<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/retrofit"
    android:background="@color/white"
    android:gravity="center"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/readjson_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:textSize="@dimen/_17sdp"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/retreadjson" />

    <Button
        android:id="@+id/readarray_retrofit"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@+id/readjson_retrofit"
        android:textSize="@dimen/_17sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/retreadarray" />

    <Button
        android:id="@+id/senddataget_retrofit"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/readarray_retrofit"
        android:textSize="@dimen/_17sdp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:text="@string/retget" />

    <Button
        android:id="@+id/sendpost_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:textSize="@dimen/_17sdp"
        android:textAllCaps="false"
        android:text="@string/retpost"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/senddataget_retrofit"
        android:layout_marginTop="@dimen/_40sdp"/>

</RelativeLayout>
